--- a/BaselinkerSubiektConnector/MainWindow.xaml
+++ b/BaselinkerSubiektConnector/MainWindow.xaml
@@ -5,32 +5,32 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BaselinkerSubiektConnector"
         mc:Ignorable="d"        
-        Title="InsERT nexo SDK" Height="800" Width="600">
+        Title="Baselinker - Subiekt Connector" Height="800" Width="600">
 
     <Window.Resources>
-        
+
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
     </Window.Resources>
-    
+
     <StackPanel>
 
         <DockPanel LastChildFill="True">
 
-			<WrapPanel DockPanel.Dock="Top" Orientation="Horizontal">
-				<TextBlock Padding="4" Margin="8" FontSize="14" >
+            <WrapPanel DockPanel.Dock="Top" Orientation="Horizontal">
+                <TextBlock Padding="4" Margin="8" FontSize="14" >
 				    <Run Text="Wersja Sfery:" />
 				    <Run Text="{Binding WersjaSfery, Mode=OneTime}" />
-				</TextBlock>
+                </TextBlock>
 
-				<TextBlock Padding="4" Margin="8" FontSize="14" 
+                <TextBlock Padding="4" Margin="8" FontSize="14" 
 						   Visibility="{Binding CzyJestBaza, Converter={StaticResource BooleanToVisibilityConverter}}">
 				    <Run Text="Baza:" />
 				    <Run Text="{Binding Baza, Mode=OneWay}" />
-				</TextBlock>
-			</WrapPanel>
+                </TextBlock>
+            </WrapPanel>
 
-			<Ellipse DockPanel.Dock="Left" Width="25" Height="25" Margin="8 8 2 8">
+            <Ellipse DockPanel.Dock="Left" Width="25" Height="25" Margin="8 8 2 8">
                 <Ellipse.Style>
                     <Style TargetType="{x:Type Ellipse}">
                         <Setter Property="Fill" Value="Red" />
@@ -86,7 +86,7 @@
 
         <Grid Visibility="{Binding CzyTrwaUruchamianieSfery, Converter={StaticResource BooleanToVisibilityConverter}}"
               Margin="12 8" Height="25">
-            
+
             <ProgressBar Visibility="{Binding CzyTrwaUruchamianieSfery, Converter={StaticResource BooleanToVisibilityConverter}}"
                          IsIndeterminate="False" Minimum="0" Maximum="100" Value="{Binding PostepLadowania.BiezacyProcent}" 
                          Background="LightGray" />
@@ -96,8 +96,55 @@
                        Padding="4" HorizontalAlignment="Center" VerticalAlignment="Center" />
         </Grid>
 
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
 
-        <Button Margin="12 8" Padding="8 4" FontSize="14"
+            <TextBlock Text="Konfiguracja bazy danych" FontWeight="Bold" Grid.Row="0" Margin="5"/>
+            <TextBlock Text="Adres IP:" Grid.Row="1" Margin="5"/>
+            <TextBox x:Name="MSSQL_IP" Grid.Row="2" Margin="5"/>
+            <TextBlock Text="Użytkownik:" Grid.Row="3" Margin="5"/>
+            <TextBox x:Name="MSSQL_User" Grid.Row="4" Margin="5"/>
+            <TextBlock Text="Hasło:" Grid.Row="5" Margin="5"/>
+            <TextBox x:Name="MSSQL_Password" Grid.Row="6" Margin="5"/>
+            <TextBlock Text="Nazwa bazy danych:" Grid.Row="9" Margin="5"/>
+            <TextBox x:Name="MSSQL_Name" Grid.Row="10" Margin="5"/>
+
+            <TextBlock Text="Dane logowania Subiekt" FontWeight="Bold" Grid.Row="11" Margin="5"/>
+            <TextBlock Text="Użytkownik:" Grid.Row="12" Margin="5"/>
+            <TextBox x:Name="Subiekt_User" Grid.Row="13" Margin="5"/>
+            <TextBlock Text="Hasło:" Grid.Row="14" Margin="5"/>
+            <TextBox x:Name="Subiekt_Password" Grid.Row="15" Margin="5"/>
+
+            <TextBlock Text="Konfiguracja Baselinker" FontWeight="Bold" Grid.Row="16" Margin="5"/>
+            <TextBlock Text="Klucz API:" Grid.Row="17" Margin="5"/>
+            <TextBox x:Name="Baselinker_ApiKey" Grid.Row="18" Margin="5"/>
+            <TextBox x:Name="BlankTextBox" Grid.Row="19" Margin="5"/>
+
+            <Button Content="Sprawdź konfigurację i zapisz" Click="SaveConfiguration_Click" Grid.Row="20" Margin="30" Padding="10"/>
+        </Grid>
+
+        <Button Margin="40 30" Padding="10 4" FontSize="14"
                 HorizontalAlignment="Center"
                 Content="Uruchom przykładowe okno nexo"
                 Visibility="{Binding CzySferaJestUruchomiona, Converter={StaticResource BooleanToVisibilityConverter}}"
