BSI-3: add combobox to storages list, save storage_id & storage_name in registry

--- a/BaselinkerSubiektConnector/MainWindow.xaml
+++ b/BaselinkerSubiektConnector/MainWindow.xaml
@@ -134,8 +134,8 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <ComboBox x:Name="MSSQL_Name" HorizontalAlignment="Stretch" Margin="0 0 5 0"/>
-        
-                <Button Grid.Column="1" Content="Pobierz dostępne bazy" Click="MssqlTest_Click" MinWidth="100"/>
+
+                <Button Grid.Column="1" Content="Pobierz dostępne bazy" Click="MssqlGetDbName" MinWidth="100"/>
             </Grid>
 
             <TextBlock Text="Dane logowania Subiekt" FontWeight="Bold" Grid.Row="11" Margin="5"/>
@@ -145,15 +145,16 @@
             <TextBox x:Name="Subiekt_Password" Grid.Row="15" Margin="5"/>
 
             <TextBlock Text="Konfiguracja Baselinker" FontWeight="Bold" Grid.Row="16" Margin="5"/>
-            <TextBlock Text="Klucz API:" Grid.Row="17" Margin="5"/>
+            <TextBox x:Name="Baselinker_ApiKey" Grid.Row="17" Margin="5"/>
+
             <Grid Grid.Row="18" Margin="5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
+                <ComboBox x:Name="Baselinker_StorageName" HorizontalAlignment="Stretch" Margin="0 0 5 0"/>
 
-                <TextBox x:Name="Baselinker_ApiKey" HorizontalAlignment="Stretch" Margin="0 0 5 0"/>
-                <Button Grid.Column="1" Content="Testuj połączenie" Click="BaselinkerTest_Click" MinWidth="100"/>
+                <Button Grid.Column="1" Content="Pobierz magazyny" Click="BaselinkerGetStorage_Click" MinWidth="100"/>
             </Grid>
             <TextBox x:Name="BlankTextBox" Grid.Row="19" Margin="5"/>
 
