--- a/BaselinkerSubiektConnector/MainWindow.xaml
+++ b/BaselinkerSubiektConnector/MainWindow.xaml
@@ -158,10 +158,17 @@
             </Grid>
             <TextBox x:Name="BlankTextBox" Grid.Row="19" Margin="5"/>
 
-            <Button Content="Sprawdź konfigurację i zapisz" Click="SaveConfiguration_Click" Grid.Row="20" Margin="30" Padding="10"/>
+            <Button Content="Sprawdź konfigurację i zapisz" Click="SaveConfiguration_Click" Grid.Row="20" Margin="10" Padding="10"/>
         </Grid>
 
-        <Button Margin="40 30" Padding="10 4" FontSize="14"
+
+        <Button Margin="0 10" Padding="10 4" FontSize="14"
+                HorizontalAlignment="Center"
+                Content="Uruchom/Zatrzymaj serwer WWW"
+                Click="StopStartHttpService_Click"/>
+        <TextBlock Text="Oczekuje na informacje o statusie" x:Name="HttpServiceCheck" Margin="0"/>
+
+        <Button Margin="40 10" Padding="10 4" FontSize="14"
                 HorizontalAlignment="Center"
                 Content="Uruchom przykładowe okno nexo"
                 Visibility="{Binding CzySferaJestUruchomiona, Converter={StaticResource BooleanToVisibilityConverter}}"
