--- a/BaselinkerSubiektConnector/MainWindow.xaml
+++ b/BaselinkerSubiektConnector/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BaselinkerSubiektConnector"
         mc:Ignorable="d"        
-        Title="Baselinker - Subiekt Connector" Height="800" Width="600">
+        Title="Baselinker - Subiekt Connector" Height="800" Width="1200">
 
     <Window.Resources>
 
@@ -13,166 +13,234 @@
 
     </Window.Resources>
 
-    <StackPanel>
+    <Grid>
 
-        <DockPanel LastChildFill="True">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-            <WrapPanel DockPanel.Dock="Top" Orientation="Horizontal">
-                <TextBlock Padding="4" Margin="8" FontSize="14" >
-				    <Run Text="Wersja Sfery:" />
-				    <Run Text="{Binding WersjaSfery, Mode=OneTime}" />
-                </TextBlock>
+        <StackPanel Grid.Row="0">
+            <DockPanel LastChildFill="True">
+                <WrapPanel DockPanel.Dock="Top" Orientation="Horizontal">
+                    <TextBlock Padding="4" Margin="8" FontSize="14" >
+                    <Run Text="Wersja Sfery:" />
+                    <Run Text="{Binding WersjaSfery, Mode=OneTime}" />
+                    </TextBlock>
 
-                <TextBlock Padding="4" Margin="8" FontSize="14" 
-						   Visibility="{Binding CzyJestBaza, Converter={StaticResource BooleanToVisibilityConverter}}">
-				    <Run Text="Baza:" />
-				    <Run Text="{Binding Baza, Mode=OneWay}" />
-                </TextBlock>
-            </WrapPanel>
+                    <TextBlock Padding="4" Margin="8" FontSize="14" 
+                           Visibility="{Binding CzyJestBaza, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <Run Text="Baza:" />
+                    <Run Text="{Binding Baza, Mode=OneWay}" />
+                    </TextBlock>
+                </WrapPanel>
 
-            <Ellipse DockPanel.Dock="Left" Width="25" Height="25" Margin="8 8 2 8">
-                <Ellipse.Style>
-                    <Style TargetType="{x:Type Ellipse}">
-                        <Setter Property="Fill" Value="Red" />
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding CzyTrwaUruchamianieSfery}" Value="True">
-                                <Setter Property="Fill" Value="Gray" />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding CzySferaJestUruchomiona}" Value="True">
-                                <Setter Property="Fill" Value="Green" />
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </Ellipse.Style>
-            </Ellipse>
+                <Ellipse DockPanel.Dock="Left" Width="25" Height="25" Margin="8 8 2 8">
+                    <Ellipse.Style>
+                        <Style TargetType="{x:Type Ellipse}">
+                            <Setter Property="Fill" Value="Red" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding CzyTrwaUruchamianieSfery}" Value="True">
+                                    <Setter Property="Fill" Value="Gray" />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding CzySferaJestUruchomiona}" Value="True">
+                                    <Setter Property="Fill" Value="Green" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Ellipse.Style>
+                </Ellipse>
 
-            <Button DockPanel.Dock="Right" 
+                <Button DockPanel.Dock="Right" 
                     Margin="4 8 8 8" Padding="8 4"
                     FontSize="14"
                     Content="Połącz ze Sferą" 
                     Click="PolaczButton_Click">
-                <Button.Style>
-                    <Style TargetType="{x:Type Button}">
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding CzyTrwaUruchamianieSfery}" Value="True">
-                                <Setter Property="IsEnabled" Value="False" />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding CzySferaJestUruchomiona}" Value="True">
-                                <Setter Property="IsEnabled" Value="False" />
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </Button.Style>
-            </Button>
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding CzyTrwaUruchamianieSfery}" Value="True">
+                                    <Setter Property="IsEnabled" Value="False" />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding CzySferaJestUruchomiona}" Value="True">
+                                    <Setter Property="IsEnabled" Value="False" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
 
-            <TextBlock DockPanel.Dock="Left" 
+                <TextBlock DockPanel.Dock="Left" 
                        Padding="4" Margin="2 8 4 8"
                        FontSize="14" FontWeight="SemiBold">
-                <TextBlock.Style>
-                    <Style TargetType="{x:Type TextBlock}">
-                        <Setter Property="Text" Value="Nie ma połączenia ze Sferą" />
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding CzyTrwaUruchamianieSfery}" Value="True">
-                                <Setter Property="Text" Value="Trwa łączenie ze Sferą" />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding CzySferaJestUruchomiona}" Value="True">
-                                <Setter Property="Text" Value="Połączenie ze Sferą jest aktywne" />
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </TextBlock.Style>
-            </TextBlock>
-        </DockPanel>
+                    <TextBlock.Style>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="Text" Value="Nie ma połączenia ze Sferą" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding CzyTrwaUruchamianieSfery}" Value="True">
+                                    <Setter Property="Text" Value="Trwa łączenie ze Sferą" />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding CzySferaJestUruchomiona}" Value="True">
+                                    <Setter Property="Text" Value="Połączenie ze Sferą jest aktywne" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+            </DockPanel>
 
-        <Grid Visibility="{Binding CzyTrwaUruchamianieSfery, Converter={StaticResource BooleanToVisibilityConverter}}"
+            <Grid Visibility="{Binding CzyTrwaUruchamianieSfery, Converter={StaticResource BooleanToVisibilityConverter}}"
               Margin="12 8" Height="25">
 
-            <ProgressBar Visibility="{Binding CzyTrwaUruchamianieSfery, Converter={StaticResource BooleanToVisibilityConverter}}"
+                <ProgressBar Visibility="{Binding CzyTrwaUruchamianieSfery, Converter={StaticResource BooleanToVisibilityConverter}}"
                          IsIndeterminate="False" Minimum="0" Maximum="100" Value="{Binding PostepLadowania.BiezacyProcent}" 
                          Background="LightGray" />
 
-            <TextBlock Text="{Binding PostepLadowania.Opis}"                    
+                <TextBlock Text="{Binding PostepLadowania.Opis}"                    
                        FontSize="14" FontWeight="SemiBold"
                        Padding="4" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            </Grid>
+
+        </StackPanel>
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Grid.Column="0">
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Text="Konfiguracja bazy danych" FontWeight="Bold" Grid.Row="0" Margin="5"/>
+                    <TextBlock Text="Adres IP:" Grid.Row="1" Margin="5"/>
+                    <TextBox x:Name="MSSQL_IP" Grid.Row="2" Margin="5"/>
+                    <TextBlock Text="Użytkownik:" Grid.Row="3" Margin="5"/>
+                    <TextBox x:Name="MSSQL_User" Grid.Row="4" Margin="5"/>
+                    <TextBlock Text="Hasło:" Grid.Row="5" Margin="5"/>
+                    <TextBox x:Name="MSSQL_Password" Grid.Row="6" Margin="5"/>
+                    <TextBlock Text="Wybierz baze danych:" Grid.Row="9" Margin="5"/>
+                    <Grid Grid.Row="10" Margin="5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <ComboBox x:Name="MSSQL_Name" HorizontalAlignment="Stretch" Margin="0 0 5 0"/>
+
+                        <Button Grid.Column="1" Content="Pobierz dostępne bazy" Click="MssqlGetDbName" MinWidth="100"/>
+                    </Grid>
+
+                    <TextBlock Text="Dane logowania Subiekt" FontWeight="Bold" Grid.Row="11" Margin="5"/>
+                    <TextBlock Text="Użytkownik:" Grid.Row="12" Margin="5"/>
+                    <TextBox x:Name="Subiekt_User" Grid.Row="13" Margin="5"/>
+                    <TextBlock Text="Hasło:" Grid.Row="14" Margin="5"/>
+                    <TextBox x:Name="Subiekt_Password" Grid.Row="15" Margin="5"/>
+
+                    <TextBlock Text="Konfiguracja Baselinker" FontWeight="Bold" Grid.Row="16" Margin="5"/>
+                    <TextBox x:Name="Baselinker_ApiKey" Grid.Row="17" Margin="5"/>
+
+                    <Grid Grid.Row="18" Margin="5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <ComboBox x:Name="Baselinker_StorageName" HorizontalAlignment="Stretch" Margin="0 0 5 0"/>
+
+                        <Button Grid.Column="1" Content="Pobierz magazyny" Click="BaselinkerGetStorage_Click" MinWidth="100"/>
+                    </Grid>
+                </Grid>
+
+
+            </StackPanel>
+
+
+            <StackPanel Grid.Column="1">
+                <TextBlock Text="Konfiguracja magazynu/Oddziału" FontWeight="Bold" Grid.Row="0" Margin="5"/>
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Grid Grid.Row="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Grid.Column="0">
+                            <TextBlock Text="Magazyn" FontWeight="Bold" Grid.Row="0" Margin="5"/>
+                            <ComboBox x:Name="Subiekt_DefaultWarehouse" Margin="5"/>
+                        </StackPanel>
+
+                        <StackPanel Grid.Column="1">
+                            <TextBlock Text="Oddział" FontWeight="Bold" Grid.Row="0" Margin="5"/>
+                            <ComboBox x:Name="Subiekt_DefaultBranch" Margin="5"/>
+                        </StackPanel>
+                    </Grid>
+
+                    <Grid Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Grid.Column="0">
+                            <TextBlock Text="Wybierz drukarkę" FontWeight="Bold" Grid.Row="0" Margin="5"/>
+                            <CheckBox x:Name="Subiekt_PrinterEnabled" Margin="5" Content="Drukować automatycznie?" />
+                            <ComboBox x:Name="Subiekt_PrinterName" Margin="5"/>
+                        </StackPanel>
+
+                        <StackPanel Grid.Column="1">
+                            <TextBlock Text="Wybierz kasę fiskalną" FontWeight="Bold" Grid.Row="0" Margin="5"/>
+                            <CheckBox x:Name="Subiekt_CashRegisterEnabled" Margin="5" Content="Fiskalizować automatycznie?" />
+                            <ComboBox x:Name="Subiekt_CashRegisterName" Margin="5"/>
+                        </StackPanel>
+                    </Grid>
+                </Grid>
+            </StackPanel>
         </Grid>
 
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
 
-            <TextBlock Text="Konfiguracja bazy danych" FontWeight="Bold" Grid.Row="0" Margin="5"/>
-            <TextBlock Text="Adres IP:" Grid.Row="1" Margin="5"/>
-            <TextBox x:Name="MSSQL_IP" Grid.Row="2" Margin="5"/>
-            <TextBlock Text="Użytkownik:" Grid.Row="3" Margin="5"/>
-            <TextBox x:Name="MSSQL_User" Grid.Row="4" Margin="5"/>
-            <TextBlock Text="Hasło:" Grid.Row="5" Margin="5"/>
-            <TextBox x:Name="MSSQL_Password" Grid.Row="6" Margin="5"/>
-            <TextBlock Text="Wybierz baze danych:" Grid.Row="9" Margin="5"/>
-            <Grid Grid.Row="10" Margin="5">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <ComboBox x:Name="MSSQL_Name" HorizontalAlignment="Stretch" Margin="0 0 5 0"/>
-
-                <Button Grid.Column="1" Content="Pobierz dostępne bazy" Click="MssqlGetDbName" MinWidth="100"/>
-            </Grid>
-
-            <TextBlock Text="Dane logowania Subiekt" FontWeight="Bold" Grid.Row="11" Margin="5"/>
-            <TextBlock Text="Użytkownik:" Grid.Row="12" Margin="5"/>
-            <TextBox x:Name="Subiekt_User" Grid.Row="13" Margin="5"/>
-            <TextBlock Text="Hasło:" Grid.Row="14" Margin="5"/>
-            <TextBox x:Name="Subiekt_Password" Grid.Row="15" Margin="5"/>
-
-            <TextBlock Text="Konfiguracja Baselinker" FontWeight="Bold" Grid.Row="16" Margin="5"/>
-            <TextBox x:Name="Baselinker_ApiKey" Grid.Row="17" Margin="5"/>
-
-            <Grid Grid.Row="18" Margin="5">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <ComboBox x:Name="Baselinker_StorageName" HorizontalAlignment="Stretch" Margin="0 0 5 0"/>
-
-                <Button Grid.Column="1" Content="Pobierz magazyny" Click="BaselinkerGetStorage_Click" MinWidth="100"/>
-            </Grid>
-            <TextBox x:Name="BlankTextBox" Grid.Row="19" Margin="5"/>
+        <StackPanel Grid.Row="2">
 
             <Button Content="Sprawdź konfigurację i zapisz" Click="SaveConfiguration_Click" Grid.Row="20" Margin="10" Padding="10"/>
-        </Grid>
-
-
-        <Button Margin="0 10" Padding="10 4" FontSize="14"
+            <Button Margin="0 10" Padding="10 4" FontSize="14"
                 HorizontalAlignment="Center"
                 Content="Uruchom/Zatrzymaj serwer WWW"
                 Click="StopStartHttpService_Click"/>
-        <TextBlock Text="Oczekuje na informacje o statusie" x:Name="HttpServiceCheck" Margin="0"/>
+            <TextBlock Text="Oczekuje na informacje o statusie" x:Name="HttpServiceCheck" Margin="0"/>
 
-        <Button Margin="40 10" Padding="10 4" FontSize="14"
+            <Button Margin="40 10" Padding="10 4" FontSize="14"
                 HorizontalAlignment="Center"
                 Content="Uruchom przykładowe okno nexo"
                 Visibility="{Binding CzySferaJestUruchomiona, Converter={StaticResource BooleanToVisibilityConverter}}"
                 Click="UruchomButton_Click"/>
-
-    </StackPanel>
+        </StackPanel>
+    </Grid>
 </Window>
