--- a/BaselinkerSubiektConnector/MainWindow.xaml
+++ b/BaselinkerSubiektConnector/MainWindow.xaml
@@ -149,7 +149,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <ComboBox x:Name="MSSQL_Name" HorizontalAlignment="Stretch" Margin="0 0 5 0"/>
+                        <ComboBox x:Name="MSSQL_Name" SelectionChanged="MSSQL_Name_SelectionChanged" HorizontalAlignment="Stretch" Margin="0 0 5 0"/>
 
                         <Button Grid.Column="1" Content="Pobierz dostępne bazy" Click="MssqlGetDbName" MinWidth="100"/>
                     </Grid>
