--- a/BaselinkerSubiektConnector/MainWindow.xaml
+++ b/BaselinkerSubiektConnector/MainWindow.xaml
@@ -185,6 +185,8 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
                     <Grid Grid.Row="0">
@@ -221,6 +223,16 @@
                             <CheckBox x:Name="Subiekt_CashRegisterEnabled" Margin="5" Content="Fiskalizować automatycznie?" />
                             <ComboBox x:Name="Subiekt_CashRegisterName" Margin="5"/>
                         </StackPanel>
+                    </Grid>
+
+                    <TextBlock Text="Wybierz folder zapisu" FontWeight="Bold" Grid.Row="2" Margin="5"/>
+                    <Grid Grid.Row="3" Margin="5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="Config_FolderPath" IsReadOnly="True" HorizontalAlignment="Stretch" Margin="0 0 5 0"/>
+                        <Button Grid.Column="1" Content="Wybierz folder" Click="SelectFolder_Click" MinWidth="100"/>
                     </Grid>
                 </Grid>
             </StackPanel>
