--- a/BaselinkerSubiektConnector/MainWindow.xaml
+++ b/BaselinkerSubiektConnector/MainWindow.xaml
@@ -213,13 +213,13 @@
                                     </Grid.ColumnDefinitions>
 
                                     <StackPanel Grid.Column="0">
-                                        <TextBlock Text="Magazyn" FontWeight="Bold" Grid.Row="0" Margin="5"/>
-                                        <ComboBox x:Name="Subiekt_DefaultWarehouse" Margin="5"/>
+                                        <TextBlock Text="Magazyn" Grid.Row="0" Margin="5 0 0 0"/>
+                                        <ComboBox x:Name="Subiekt_DefaultWarehouse" Margin="5 0 0 0"/>
                                     </StackPanel>
 
                                     <StackPanel Grid.Column="1">
-                                        <TextBlock Text="Oddział" FontWeight="Bold" Grid.Row="0" Margin="5"/>
-                                        <ComboBox x:Name="Subiekt_DefaultBranch" Margin="5"/>
+                                        <TextBlock Text="Oddział" Grid.Row="0" Margin="5 0 0 0"/>
+                                        <ComboBox x:Name="Subiekt_DefaultBranch" Margin="5 0 0 0"/>
                                     </StackPanel>
                                 </Grid>
 
@@ -231,14 +231,14 @@
 
                                     <StackPanel Grid.Column="0">
                                         <TextBlock Text="Wybierz drukarkę" FontWeight="Bold" Grid.Row="0" Margin="5"/>
-                                        <CheckBox x:Name="Subiekt_PrinterEnabled" Margin="5" Content="Drukować automatycznie?" />
-                                        <ComboBox x:Name="Subiekt_PrinterName" Margin="5"/>
+                                        <CheckBox x:Name="Subiekt_PrinterEnabled" Margin="5 0 0 0" Content="Drukować automatycznie?" />
+                                        <ComboBox x:Name="Subiekt_PrinterName" Margin="5 0 0 0"/>
                                     </StackPanel>
 
                                     <StackPanel Grid.Column="1">
                                         <TextBlock Text="Wybierz kasę fiskalną" FontWeight="Bold" Grid.Row="0" Margin="5"/>
-                                        <CheckBox x:Name="Subiekt_CashRegisterEnabled" Margin="5" Content="Fiskalizować automatycznie?" />
-                                        <ComboBox x:Name="Subiekt_CashRegisterName" Margin="5"/>
+                                        <CheckBox x:Name="Subiekt_CashRegisterEnabled" Margin="5 0 0 0" Content="Fiskalizować automatycznie?" />
+                                        <ComboBox x:Name="Subiekt_CashRegisterName" Margin="5 0 0 0"/>
                                     </StackPanel>
                                 </Grid>
 
@@ -261,13 +261,13 @@
                                     </Grid.ColumnDefinitions>
 
                                     <StackPanel Grid.Column="0">
-                                        <TextBlock Text="Serwer SMTP" FontWeight="Bold" Grid.Row="0" Margin="5 5 0 0"/>
-                                        <TextBox x:Name="Config_EmailServer"  Margin="5 5 0 0"/>
+                                        <TextBlock Text="Serwer SMTP" Grid.Row="0" Margin="5 0 0 0"/>
+                                        <TextBox x:Name="Config_EmailServer"  Margin="5 0 0 0"/>
                                     </StackPanel>
 
                                     <StackPanel Grid.Column="1">
-                                        <TextBlock Text="Port SMTP" FontWeight="Bold" Grid.Row="0"  Margin="5 5 0 0"/>
-                                        <TextBox x:Name="Config_EmailPort"  Margin="5 5 0 0"/>
+                                        <TextBlock Text="Port SMTP" Grid.Row="0"  Margin="5 0 0 0"/>
+                                        <TextBox x:Name="Config_EmailPort"  Margin="5 0 0 0"/>
                                     </StackPanel>
                                 </Grid>
                                 <Grid Grid.Row="7">
@@ -277,17 +277,74 @@
                                     </Grid.ColumnDefinitions>
 
                                     <StackPanel Grid.Column="0">
-                                        <TextBlock Text="Login (e-mail)" FontWeight="Bold" Grid.Row="0"  Margin="5 5 0 0"/>
-                                        <TextBox x:Name="Config_EmailLogin"  Margin="5 5 0 0"/>
+                                        <TextBlock Text="Login (e-mail)" Grid.Row="0"  Margin="5 0 0 0"/>
+                                        <TextBox x:Name="Config_EmailLogin"  Margin="5 0 0 0"/>
                                     </StackPanel>
 
                                     <StackPanel Grid.Column="1">
-                                        <TextBlock Text="Hasło" FontWeight="Bold" Grid.Row="0"  Margin="5 5 0 0"/>
-                                        <TextBox x:Name="Config_EmailPassword"  Margin="5 5 0 0"/>
+                                        <TextBlock Text="Hasło" Grid.Row="0"  Margin="5 0 0 0"/>
+                                        <TextBox x:Name="Config_EmailPassword"  Margin="5 0 0 0"/>
                                     </StackPanel>
                                 </Grid>
                             </Grid>
+                            <TextBlock Text="Błędy aplikacji" FontWeight="Bold" Grid.Row="4" Margin="5"/>
+                            <TextBlock Text="Powiadamiaj o błędach działania na adres e-mail" Grid.Row="0" Margin="5 0 0 0"/>
+                            <TextBox x:Name="Config_EmailReporting"  Margin="5 0 0 0"/>
+                            <TextBlock Text="Informacje o firmie" FontWeight="Bold" Grid.Row="4" Margin="5"/>
+                            <Grid Grid.Row="7">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
 
+                                <StackPanel Grid.Column="0">
+                                    <TextBlock Text="Nazwa firmy" Grid.Row="0"  Margin="5 0 0 0"/>
+                                    <TextBox x:Name="Config_CompanyName"  Margin="5 0 0 0"/>
+                                </StackPanel>
+
+                                <StackPanel Grid.Column="1">
+                                    <TextBlock Text="Numer NIP" Grid.Row="0"  Margin="5 0 0 0"/>
+                                    <TextBox x:Name="Config_CompanyNip"  Margin="5 0 0 0"/>
+                                </StackPanel>
+                            </Grid>
+                            <Grid Grid.Row="7">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+
+                                <StackPanel Grid.Column="0">
+                                    <TextBlock Text="Adres korespondencyjny" Grid.Row="0"  Margin="5 5 0 0"/>
+                                    <TextBox x:Name="Config_CompanyAddress"  Margin="5 0 0 0"/>
+                                </StackPanel>
+
+                                <StackPanel Grid.Column="1">
+                                    <TextBlock Text="Kod pocztowy" Grid.Row="0"  Margin="5 5 0 0"/>
+                                    <TextBox x:Name="Config_CompanyZipCode"  Margin="5 0 0 0"/>
+                                </StackPanel>
+
+                                <StackPanel Grid.Column="2">
+                                    <TextBlock Text="Miejscowość" Grid.Row="0"  Margin="5 5 0 0"/>
+                                    <TextBox x:Name="Config_CompanyCity"  Margin="5 0 0 0"/>
+                                </StackPanel>
+                            </Grid>
+                            <Grid Grid.Row="7">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+
+                                <StackPanel Grid.Column="0">
+                                    <TextBlock Text="Adres e-mail" Grid.Row="0"  Margin="5 5 0 0"/>
+                                    <TextBox x:Name="Config_CompanyEmailAddress"  Margin="5 0 0 0"/>
+                                </StackPanel>
+
+                                <StackPanel Grid.Column="1">
+                                    <TextBlock Text="Numer telefonu" Grid.Row="0"  Margin="5 5 0 0"/>
+                                    <TextBox x:Name="Config_CompanyPhone"  Margin="5 0 0 0"/>
+                                </StackPanel>
+                            </Grid>
                         </StackPanel>
                     </Grid>
 
@@ -302,12 +359,27 @@
             </TabItem>
 
 
-            <TabItem Header="Synchronizacja magazynów">
-                
+            <TabItem Header="Edycja szablonu e-mail">
+                <Grid>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Grid Grid.Row="0">
+                        <TextBox x:Name="EmailTemplate" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Margin="0" Height="450"/>
+                    </Grid>
+
+                    <Button Content="Zapisz szablon" Click="EmailTemplate_Click" Grid.Row="1" Margin="10" Padding="10"/>
+                </Grid>
+
             </TabItem>
 
-            <TabItem Header="Edycja szablonu e-mail">
-                
+
+
+            <TabItem Header="Synchronizacja magazynów">
+
             </TabItem>
 
             <TabItem Header="Logi">
